--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,8 @@ body {
     height: 100vh;
     display: grid;
     place-content: center;
+    min-width: 320px;
+    min-height: 540px;
 }
 
 /* card */
